--- a/src/Myrcon.Protocols.Frostbite.Test/packages.config
+++ b/src/Myrcon.Protocols.Frostbite.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Myrcon.Potato.Shared" version="2.0.159" targetFramework="net40" />
+  <package id="Myrcon.Potato.Shared" version="2.0.160" targetFramework="net40" />
+  <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
