--- a/src/Myrcon.Protocols.Frostbite/Myrcon.Protocols.Frostbite.csproj
+++ b/src/Myrcon.Protocols.Frostbite/Myrcon.Protocols.Frostbite.csproj
@@ -49,28 +49,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Potato.Net.Shared">
-      <HintPath>..\packages\Myrcon.Potato.Shared.2.0.159\lib\net40\Potato.Net.Shared.dll</HintPath>
+      <HintPath>..\packages\Myrcon.Potato.Shared.2.0.160\lib\net40\Potato.Net.Shared.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Battlefield\Battlefield3\Battlefield3Game.cs" />
-    <Compile Include="Battlefield\Battlefield3\Objects\Battlefield3FrostbiteMapList.cs" />
-    <Compile Include="Battlefield\Battlefield3\Objects\Battlefield3PlayerList.cs" />
-    <Compile Include="Battlefield\Battlefield3\Objects\Battlefield3BanList.cs" />
-    <Compile Include="Battlefield\Battlefield4\Battlefield4Game.cs" />
-    <Compile Include="Battlefield\Battlefield4\Objects\Battlefield4BanList.cs" />
-    <Compile Include="Battlefield\Battlefield4\Objects\Battlefield4FrostbiteMapList.cs" />
-    <Compile Include="Battlefield\Battlefield4\Objects\Battlefield4PlayerList.cs" />
-    <Compile Include="Battlefield\BattlefieldBadCompany2\BattlefieldBadCompany2Game.cs" />
-    <Compile Include="Battlefield\BattlefieldGame.cs" />
+    <Compile Include="Generations\First\Games\FirstGame.cs" />
+    <Compile Include="Generations\Second\Games\Battlefield3Game.cs" />
+    <Compile Include="Generations\Second\Games\Battlefield4Game.cs" />
+    <Compile Include="Generations\Second\Objects\SecondFrostbiteBanList.cs" />
+    <Compile Include="Generations\Second\Objects\SecondFrostbiteMapList.cs" />
+    <Compile Include="Generations\Second\Objects\SecondFrostbitePlayerList.cs" />
+    <Compile Include="Generations\First\Games\BattlefieldBadCompany2Game.cs" />
+    <Compile Include="Generations\Second\Games\SecondGame.cs" />
     <Compile Include="FrostbiteClient.cs" />
     <Compile Include="FrostbiteGame.cs" />
     <Compile Include="FrostbitePacket.cs" />
     <Compile Include="FrostbitePacketDispatcher.cs" />
     <Compile Include="FrostbitePacketSerializer.cs" />
-    <Compile Include="MedalOfHonor\MedalOfHonorGame.cs" />
+    <Compile Include="Generations\First\Games\MedalOfHonorGame.cs" />
     <Compile Include="Objects\FrostbiteBan.cs" />
     <Compile Include="Objects\FrostbiteBanList.cs" />
     <Compile Include="Objects\FrostbiteChat.cs" />
@@ -90,7 +88,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LICENSE.txt" />
+    <Content Include="README.txt" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Configs\Protocols\Myrcon\DiceBattlefield4.json">
@@ -105,11 +103,11 @@
     <None Include="..\Potato.licenseheader">
       <Link>Potato.licenseheader</Link>
     </None>
+    <None Include="Geolocation\Maxmind\GeoIP.dat" />
     <None Include="Myrcon.Protocols.Frostbite.nuspec" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
